--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@ layout: default
 		</span>
 	</div>
 	-->
+		
+	<div class="banner" style="background-color: red">
+		<span style="display: inline-block;
+		text-align: center;
+		width: 100%; padding-top: 15px;">
+		<i class="fa-solid fa-3x fa-exclamation-triangle" style="display: inline-block;
+		text-align: left;
+		font-size: 25px;"></i> &nbsp;
+		<a href="https://functionome.geneontology.org/" style="color:white; font-size: 14px;">
+			PAN-GO Functionome: Working on human protein-coding genes? Click here to access the new PAN-GO Functionome!
+		</a>
+		</span>
+	</div>
+	
 
 	<div class="container" style="width: 98%;">
 		<div class="container" style="width: 98%; padding-top: 50px;">
