--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ layout: default
 	</div>
 	-->
 		
-	<div class="banner" style="background-color: red">
+	<div class="banner" style="background-color: rgb(31, 166, 122)">
 		<span style="display: inline-block;
 		text-align: center;
 		width: 100%; padding-top: 15px;">
-		<i class="fa-solid fa-3x fa-exclamation-triangle" style="display: inline-block;
+		<i class="fa-solid fa-3x fa-bullhorn" style="display: inline-block;
 		text-align: left;
 		font-size: 25px;"></i> &nbsp;
 		<a href="https://functionome.geneontology.org/" style="color:white; font-size: 14px;">
