--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@ layout: default
 							<i class="fa-solid fa-info"></i> &nbsp; GO Annotations Overview</a>
 					</div>
 					<div>
+						<a href="https://functionome.geneontology.org/" class="card__link">
+							<i class="fa-solid fa-sitemap"></i> &nbsp; PAN-GO Functionome</a>
+					</div>					
+					<div>
 						<a href="https://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
 							<i class="fa-regular fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
