--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ layout: default
 							</div>
 							<div id="input_hint" class="input_hint">Hint: can use UniProt ID/AC, Gene Name, Gene Symbols, MOD IDs</div>
 							<div>
-							  <span style="width: 100%; display: block; font-size: 14px;"><i class="fa-solid fa-3x fa-bullhorn" style="text-align: left; font-size: 14px;"></i>&nbsp;<a href="https://enrichment.functionome.org" style="color: white" target="blank">PAN-GO enrichment can be found here</a></span>
+							  <span style="width: 100%; display: block; font-size: 14px;"><i class="fa-solid fa-3x fa-bullhorn" style="text-align: left; font-size: 14px;"></i>&nbsp;<a href="https://functionome.geneontology.org" style="color: white" target="blank">PAN-GO enrichment can be found here</a></span>
 							</div>
 						</form>
 				</div>
