from email thread w/ @pgaudet , make corrections to categories; also, fix obvs error to script header; update example file; for geneontology/pipeline#396

--- a/scripts/example_output.html
+++ b/scripts/example_output.html
@@ -60,7 +60,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Nematode C. elegans</td>
-          <td>nematode worm</td>
+          <td>Nematode C. elegans</td>
           <td>Nematodes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAEEL.gaf.gz">CAEEL.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAEEL-uniprot.gaf.gz">CAEEL-uniprot.gaf.gz</a></td>
@@ -76,7 +76,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Saccharomyces cerevisiae</td>
-          <td>"Brewer's yeast"</td>
+          <td>Baker's yeast</td>
           <td>Fungi</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/YEAST.gaf.gz">YEAST.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/YEAST-uniprot.gaf.gz">YEAST-uniprot.gaf.gz</a></td>
@@ -115,14 +115,6 @@ title: Downloads
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>"Streptococcus pyogenes serotype M1 (Strain: ATCC 700294 / SF370 / Serotype M1)"</td>
-          <td></td>
-          <td>Bacteria</td>
-          <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP1.gaf.gz">STRP1.gaf.gz</a></td>
-          <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP1-uniprot.gaf.gz">STRP1-uniprot.gaf.gz</a></td>
-          <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/STRP1.gpi.gz">STRP1.gpi.gz</a></td>
-        </tr>
         <tr>
           <td>Acinetobacter baumannii (strain ATCC 19606 / DSM 30007 / JCM 6841 / CCUG 19606 / CIP 70.34 / NBRC 109757 / NCIMB 12457 / NCTC 12156 / 81)</td>
           <td>A. baumannii ATCC 19606</td>
@@ -164,8 +156,8 @@ title: Downloads
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/ARATH.gpi.gz">ARATH.gpi.gz</a></td>
         </tr>
         <tr>
-          <td>Aspergillus fumigatus (Af293)</td>
-          <td>A. fumigatus Af293</td>
+          <td>Aspergillus fumigatus</td>
+          <td>A. fumigatus</td>
           <td>Fungi</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/ASPFU.gaf.gz">ASPFU.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/ASPFU-uniprot.gaf.gz">ASPFU-uniprot.gaf.gz</a></td>
@@ -238,7 +230,7 @@ title: Downloads
         <tr>
           <td>Branchiostoma floridae</td>
           <td>Florida lancelet (Amphioxus)</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/BRAFL.gaf.gz">BRAFL.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/BRAFL-uniprot.gaf.gz">BRAFL-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/BRAFL.gpi.gz">BRAFL.gpi.gz</a></td>
@@ -260,8 +252,8 @@ title: Downloads
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/CAEBR.gpi.gz">CAEBR.gpi.gz</a></td>
         </tr>
         <tr>
-          <td>Campylobacter jejuni subsp. jejuni serotype O:2 (strain ATCC 700819 / NCTC 11168)</td>
-          <td></td>
+          <td>Campylobacter jejuni serotype O:2</td>
+          <td>Campylobacter O:2</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAMJE.gaf.gz">CAMJE.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAMJE-uniprot.gaf.gz">CAMJE-uniprot.gaf.gz</a></td>
@@ -276,8 +268,8 @@ title: Downloads
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/CANAL.gpi.gz">CANAL.gpi.gz</a></td>
         </tr>
         <tr>
-          <td>Candida dubliniensis (strain CD36 / ATCC MYA-646 / CBS 7987 / NCPF 3949 / NRRL Y-17841)</td>
-          <td></td>
+          <td>Candida dubliniensis</td>
+          <td>C. dubliniensis</td>
           <td>Fungi</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CANDC.gaf.gz">CANDC.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CANDC-uniprot.gaf.gz">CANDC-uniprot.gaf.gz</a></td>
@@ -350,7 +342,7 @@ title: Downloads
         <tr>
           <td>Ciona intestinalis</td>
           <td>Sea squirt</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CIOIN.gaf.gz">CIOIN.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CIOIN-uniprot.gaf.gz">CIOIN-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/CIOIN.gpi.gz">CIOIN.gpi.gz</a></td>
@@ -525,7 +517,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Escherichia coli O157:H7</td>
-          <td></td>
+          <td>E. coli O157:H7</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/E. coli ECO57.gaf.gz">E. coli ECO57.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/E. coli ECO57-uniprot.gaf.gz">E. coli ECO57-uniprot.gaf.gz</a></td>
@@ -574,7 +566,7 @@ title: Downloads
         <tr>
           <td>Giardia intestinalis</td>
           <td>Giardia</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/GIAIC.gaf.gz">GIAIC.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/GIAIC-uniprot.gaf.gz">GIAIC-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/GIAIC.gpi.gz">GIAIC.gpi.gz</a></td>
@@ -654,7 +646,7 @@ title: Downloads
         <tr>
           <td>Helobdella robusta</td>
           <td>Leech</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HELRO.gaf.gz">HELRO.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HELRO-uniprot.gaf.gz">HELRO-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/HELRO.gpi.gz">HELRO.gpi.gz</a></td>
@@ -717,7 +709,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Human immunodeficiency virus type 1 group O (isolate ANT70)</td>
-          <td></td>
+          <td>HIV-1</td>
           <td>Viruses</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HV1AN.gaf.gz">HV1AN.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HV1AN-uniprot.gaf.gz">HV1AN-uniprot.gaf.gz</a></td>
@@ -725,7 +717,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Human papillomavirus type 16</td>
-          <td></td>
+          <td>HPV</td>
           <td>Viruses</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HPV16.gaf.gz">HPV16.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/HPV16-uniprot.gaf.gz">HPV16-uniprot.gaf.gz</a></td>
@@ -757,7 +749,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Klebsiella pneumoniae subsp. pneumoniae (strain HS11286)</td>
-          <td></td>
+          <td>Bacillus pneumoniae</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/KLEPH.gaf.gz">KLEPH.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/KLEPH-uniprot.gaf.gz">KLEPH-uniprot.gaf.gz</a></td>
@@ -790,7 +782,7 @@ title: Downloads
         <tr>
           <td>Leishmania major</td>
           <td>Leishmania</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/LEIMA.gaf.gz">LEIMA.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/LEIMA-uniprot.gaf.gz">LEIMA-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/LEIMA.gpi.gz">LEIMA.gpi.gz</a></td>
@@ -813,7 +805,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Listeria monocytogenes serovar 1/2a (strain ATCC BAA-679 / EGD-e)</td>
-          <td></td>
+          <td>Listeria</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/LISMO.gaf.gz">LISMO.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/LISMO-uniprot.gaf.gz">LISMO-uniprot.gaf.gz</a></td>
@@ -902,7 +894,7 @@ title: Downloads
         <tr>
           <td>Monosiga brevicollis</td>
           <td>Choanoflagellate</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/MONBE.gaf.gz">MONBE.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/MONBE-uniprot.gaf.gz">MONBE-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/MONBE.gpi.gz">MONBE.gpi.gz</a></td>
@@ -917,7 +909,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Mycobacterium tuberculosis (strain ATCC 25177 / H37Ra)</td>
-          <td></td>
+          <td>Mycobacterium sp. H37Ra</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/MYCTA.gaf.gz">MYCTA.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/MYCTA-uniprot.gaf.gz">MYCTA-uniprot.gaf.gz</a></td>
@@ -973,7 +965,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Nematode C. elegans</td>
-          <td>nematode worm</td>
+          <td>Nematode C. elegans</td>
           <td>Nematodes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAEEL.gaf.gz">CAEEL.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/CAEEL-uniprot.gaf.gz">CAEEL-uniprot.gaf.gz</a></td>
@@ -982,7 +974,7 @@ title: Downloads
         <tr>
           <td>Nematostella vectensis</td>
           <td>Starlet sea anemone</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/NEMVE.gaf.gz">NEMVE.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/NEMVE-uniprot.gaf.gz">NEMVE-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/NEMVE.gpi.gz">NEMVE.gpi.gz</a></td>
@@ -1046,7 +1038,7 @@ title: Downloads
         <tr>
           <td>Paramecium tetraurelia</td>
           <td>Alveolate paramecium</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/PARTE.gaf.gz">PARTE.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/PARTE-uniprot.gaf.gz">PARTE-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/PARTE.gpi.gz">PARTE.gpi.gz</a></td>
@@ -1078,7 +1070,7 @@ title: Downloads
         <tr>
           <td>Plasmodium falciparum (isolate 3D7)</td>
           <td>Plasmodium</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/PLAF7.gaf.gz">PLAF7.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/PLAF7-uniprot.gaf.gz">PLAF7-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/PLAF7.gpi.gz">PLAF7.gpi.gz</a></td>
@@ -1157,7 +1149,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Saccharomyces cerevisiae</td>
-          <td>"Brewer's yeast"</td>
+          <td>Baker's yeast</td>
           <td>Fungi</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/YEAST.gaf.gz">YEAST.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/YEAST-uniprot.gaf.gz">YEAST-uniprot.gaf.gz</a></td>
@@ -1245,7 +1237,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Streptococcus pneumoniae (strain ATCC BAA-255 / R6)</td>
-          <td>Streptococcus pneumoniae R6</td>
+          <td>S. pneumoniae R6</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRR6.gaf.gz">STRR6.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRR6-uniprot.gaf.gz">STRR6-uniprot.gaf.gz</a></td>
@@ -1253,7 +1245,7 @@ title: Downloads
         </tr>
         <tr>
           <td>Streptococcus pneumoniae serotype 2 (strain D39 / NCTC 7466)</td>
-          <td></td>
+          <td>S. pneumoniae D39</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP2.gaf.gz">STRP2.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP2-uniprot.gaf.gz">STRP2-uniprot.gaf.gz</a></td>
@@ -1261,11 +1253,19 @@ title: Downloads
         </tr>
         <tr>
           <td>Streptococcus pneumoniae serotype 4 (strain ATCC BAA-334 / TIGR4)</td>
-          <td></td>
+          <td>S. pneumoniae TIGR4</td>
           <td>Bacteria</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRPN.gaf.gz">STRPN.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRPN-uniprot.gaf.gz">STRPN-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/STRPN.gpi.gz">STRPN.gpi.gz</a></td>
+        </tr>
+        <tr>
+          <td>Streptococcus pyogenes serotype M1</td>
+          <td>Streptococcus</td>
+          <td>Bacteria</td>
+          <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP1.gaf.gz">STRP1.gaf.gz</a></td>
+          <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRP1-uniprot.gaf.gz">STRP1-uniprot.gaf.gz</a></td>
+          <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/STRP1.gpi.gz">STRP1.gpi.gz</a></td>
         </tr>
         <tr>
           <td>Streptomyces clavuligerus</td>
@@ -1286,7 +1286,7 @@ title: Downloads
         <tr>
           <td>Strongylocentrotus purpuratus</td>
           <td>Purple sea urchin</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRPU.gaf.gz">STRPU.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/STRPU-uniprot.gaf.gz">STRPU-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/STRPU.gpi.gz">STRPU.gpi.gz</a></td>
@@ -1310,7 +1310,7 @@ title: Downloads
         <tr>
           <td>Thalassiosira pseudonana</td>
           <td>Marine diatom</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/THAPS.gaf.gz">THAPS.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/THAPS-uniprot.gaf.gz">THAPS-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/THAPS.gpi.gz">THAPS.gpi.gz</a></td>
@@ -1358,7 +1358,7 @@ title: Downloads
         <tr>
           <td>Trichomonas vaginalis</td>
           <td>T. vaginalis</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRIV3.gaf.gz">TRIV3.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRIV3-uniprot.gaf.gz">TRIV3-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/TRIV3.gpi.gz">TRIV3.gpi.gz</a></td>
@@ -1366,7 +1366,7 @@ title: Downloads
         <tr>
           <td>Trichoplax adhaerens</td>
           <td>Trichoplax reptans</td>
-          <td>Invertebrates</td>
+          <td>Eumetazoa</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRIAD.gaf.gz">TRIAD.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRIAD-uniprot.gaf.gz">TRIAD-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/TRIAD.gpi.gz">TRIAD.gpi.gz</a></td>
@@ -1382,7 +1382,7 @@ title: Downloads
         <tr>
           <td>Trypanosoma brucei</td>
           <td>T. brucei TREU927</td>
-          <td>Eukaryota</td>
+          <td>Eukaryotes</td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRYB2.gaf.gz">TRYB2.gaf.gz</a></td>
           <td><a href="https://skyhook.geneontology.io/pipeline-from-goa/main/annotations/TRYB2-uniprot.gaf.gz">TRYB2-uniprot.gaf.gz</a></td>
           <td><a href="https://ftp.ebi.ac.uk/pub/contrib/goa/goex/current/gpi/TRYB2.gpi.gz">TRYB2.gpi.gz</a></td>
