Enhance input hint with additional ID information
Updated input hint to provide more detailed information about supported IDs.

--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@ layout: default
 										Launch <i class="fa-solid fa-chevron-right u-line-height-single"></i>
 									</button>
 								</span>
+							<div id="input_hint" class="input_hint">
+  						  Hint: works with <a href="https://www.pantherdb.org/tips/tips_batchIdSearch_supportedId.jsp" target="_blank" rel="noopener">UniProt ID/ACs, Gene Names, Gene Symbols, MOD IDs, Ensembl IDs, and more</a>
 							</div>
-							<div id="input_hint" class="input_hint">Hint: can use UniProt ID/AC, Gene Name, Gene Symbols, MOD IDs</div>
-							<div>
 							  <span style="width: 100%; display: block; font-size: 14px;"><i class="fa-solid fa-3x fa-bullhorn" style="text-align: left; font-size: 14px;"></i>&nbsp;<a href="https://functionome.geneontology.org" style="color: white" target="blank">PAN-GO enrichment can be found here</a></span>
 							</div>
 						</form>
