--- a/index.html
+++ b/index.html
@@ -265,16 +265,20 @@ layout: default
 									<button type="button" class="btn btn-primary u-no-transform u-anim-zoom-in" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" onclick="setExample()" title="Cycle through different Gene Set examples">
 										Examples
 									</button>
-
+									
 									<button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" title="Launch GO Enrichment Analysis">
 										Launch <i class="fa-solid fa-chevron-right u-line-height-single"></i>
 									</button>
 								</span>
-							<div id="input_hint" class="input_hint">
-  						  Hint: works with <a href="https://www.pantherdb.org/tips/tips_batchIdSearch_supportedId.jsp" target="_blank" rel="noopener">UniProt ID/ACs, Gene Names, Gene Symbols, MOD IDs, Ensembl IDs, and more</a>
-							</div>
-							  <span style="width: 100%; display: block; font-size: 14px;"><i class="fa-solid fa-3x fa-bullhorn" style="text-align: left; font-size: 14px;"></i>&nbsp;<a href="https://functionome.geneontology.org" style="color: white" target="blank">PAN-GO enrichment can be found here</a></span>
-							</div>
+							<span style="width: 100%; display: block; font-size: 14px;">
+								<i class="fa-solid fa-3x fa-bullhorn" style="text-align: left; font-size: 14px;"></i>&nbsp;
+								<a href="https://functionome.geneontology.org" style="color: white" target="blank">PAN-GO enrichment can be found here</a>
+							</span>
+						</div>
+							
+						<div id="input_hint" class="input_hint">
+							Hint: works with <a href="https://www.pantherdb.org/tips/tips_batchIdSearch_supportedId.jsp" target="_blank" rel="noopener">UniProt ID/ACs, Gene Names, Gene Symbols, MOD IDs, Ensembl IDs, and more</a>
+						</div>
 						</form>
 				</div>
 				<!-- <div class="hidden-xs hidden-sm">
