Update hint link style in index.html

--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@ layout: default
 						</div>
 							
 						<div id="input_hint" class="input_hint">
-							Hint: works with <a href="https://www.pantherdb.org/tips/tips_batchIdSearch_supportedId.jsp" target="_blank" rel="noopener">UniProt ID/ACs, Gene Names, Gene Symbols, MOD IDs, Ensembl IDs, and more</a>
+    						Hint: works with <a href="https://www.pantherdb.org/tips/tips_batchIdSearch_supportedId.jsp" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline;">UniProt ID/ACs, Gene Names, Gene Symbols, MOD IDs, Ensembl IDs, and more</a>
 						</div>
+
 						</form>
 				</div>
 				<!-- <div class="hidden-xs hidden-sm">
