Alphabetize select dropdown in index.html

--- a/index.html
+++ b/index.html
@@ -185,10 +185,12 @@ layout: default
 										<option value="HALSA">Halobacterium salinarum</option>
 										<option value="HELAN">Helianthus annuus</option>
 										<option value="HELPY">Helicobacter pylori</option>
+										<option value="HELRO">Helobdella robusta</option>										
 										<option value="HORVV">Hordeum vulgare subsp. vulgare</option>
 										<option value="IXOSC">Ixodes scapularis</option>
 										<option value="KORCO">Korarchaeum cryptofilum</option>
 										<option value="LEIMA">Leishmania major</option>
+										<option value="LEPOC">Lepisosteus oculatus</option>
 										<option value="LEPIN">Leptospira interrogans</option>
 										<option value="LISMO">Listeria monocytogenes</option>
 										<option value="MACMU">Macaca mulatta</option>
@@ -199,6 +201,7 @@ layout: default
 										<option value="MONBE">Monosiga brevicollis</option>
 										<option value="MUSAM">Musa acuminata subsp. malaccensis</option>
 										<option value="MYCTU">Mycobacterium tuberculosis</option>
+										<option value="MYCGE">Mycoplasma genitalium</option>
 										<option value="NEIMB">Neisseria meningitidis serogroup b</option>
 										<option value="NEMVE">Nematostella vectensis</option>
 										<option value="ASPFU">Neosartorya fumigata</option>
@@ -254,10 +257,7 @@ layout: default
 										<option value="XENTR">Xenopus tropicalis</option>
 										<option value="YARLI">Yarrowia lipolytica</option>
 										<option value="YERPE">Yersinia pestis</option>
-										<option value="MAIZE">Zea mays</option>
-										<option value="HELRO">helobdella robusta</option>
-										<option value="LEPOC">lepisosteus oculatus</option>
-										<option value="MYCGE">mycoplasma genitalium</option>
+										<option value="MAIZE">Zea mays</option>										
 									</select>
 								</div>
 									<span class="input-group-btn">
